# mecfs_bioinformatics

./: .gitignore  .importlinter  404.html  CLAUDE.md  LAVA_README.md  LICENSE.md  README.md  _typos.toml  immgen_labels  index.html  main.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  refs.bib  renovate.json  ruff.toml  sitemap.xml  tasks.py
.github/workflows/: check_links.yml  deploy_docs.yml  lockfile_maintenance_gate.yml  on_pr.yml  system_test_decodeme.yml  system_test_decodeme_hba_magma.yml  system_test_decodeme_s_ldsc.yml  system_test_genetic_corr_by_ct_ldsc.yml  system_test_harmonize.yml  system_test_lava.yml  system_test_mixer.yml  system_test_polypwas.yml  system_test_pops.yml  system_test_sbayesrc.yml
Analysis/MAGMA_IBD_Analysis/: index.html
Bioinformatics_Concepts/Cross_Trait_LDSC/: index.html
Bioinformatics_Concepts/Epigenetics/: index.html
Bioinformatics_Concepts/Fine_Mapping/: index.html
Bioinformatics_Concepts/Genetic_Correlation/: index.html
Bioinformatics_Concepts/Heritability/: index.html
Bioinformatics_Concepts/LDSC/: index.html
Bioinformatics_Concepts/MAGMA_Overview/: index.html
Bioinformatics_Concepts/Mendelian_Randomization/: index.html
Bioinformatics_Concepts/Mixer/: index.html
Bioinformatics_Concepts/Omnigenic_Model/: index.html
Bioinformatics_Concepts/S_LDSC_For_Cell_And_Tissue_ID/: index.html
Bioinformatics_Concepts/Sumstats_Standardization/: index.html
Codebase_Concepts/Build_System/: index.html
Codebase_Concepts/Figure_System/: index.html
Data_Sources/Corces_et_al/: index.html
Data_Sources/DecodeME/: index.html
Data_Sources/GTEx_RNAseq_Data/: index.html
Data_Sources/HBA_scRNAseq/: index.html
Data_Sources/Immgen_Project/: index.html
Data_Sources/Million_Veterans_Program/: index.html
Data_Sources/Roadmap/: index.html
Data_Sources/UKBB_PPP/: index.html
Getting_Started/Standard_Workflow/: index.html
Getting_Started/a_setup/: index.html
Getting_Started/b_Standard_Workflow/: index.html
Getting_Started/c_Synapse/: index.html
Getting_Started/d_adding_packages/: index.html
Getting_Started/e_experiments_directory/: index.html
Getting_Started/f_docker/: index.html
Getting_Started/setup/: index.html
Techniques/MAGMA_Overview/: index.html
Techniques_And_Concepts/Heritability/: index.html
Techniques_And_Concepts/LDSC/: index.html
Techniques_And_Concepts/MAGMA_Overview/: index.html
Techniques_And_Concepts/S_LDSC_For_Cell_And_Tissue_ID/: index.html
_figs/: bentham_2015_lupus_hba_magma_plot_extracted.html  cfs_ct_ldsc_ct_ldsc_corr_agg_markdown.mdx  decode_me_gwas_1_ldsc_heritability_markdown.mdx  decode_me_magma_gene_plot.html  decode_me_magma_gene_plot_with_window.html  decode_me_univariate_mixer_results_table_as_markdown.mdx  initial_bivariate_mixer_DecodeME_Multisite_pain_bivariate_mixer_results_table_as_markdown.mdx  initial_genetic_correlation_by_ct_ldsc_plot.html  johnston_et_al_pain_univariate_mixer_results_table_as_markdown.mdx  kamitaki_et_al_2025_hhv7_hba_magma_independent_clusters_markdown.mdx  kamitaki_et_al_2025_hhv7_hba_magma_plot_extracted.html  ldl_ct_ldsc_ct_ldsc_corr_agg_markdown.mdx  mi_analysis_lcv_table_downstream_MI.mdx  million_veterans_cfs_ldsc_heritability_markdown.mdx  million_veterans_ldl_ldsc_heritability_markdown.mdx  million_veterans_migraine_eur_ldsc_heritability_markdown.mdx  neale_lab_cfs_ldsc_heritability_markdown.mdx  nyeo_ebv_dna_hba_magma_plot_extracted.html  said_et_al_2022_crp_eur_ldsc_heritability_markdown.mdx  willer_et_al_2023_ldl_eur_ldsc_heritability_markdown.mdx  willer_et_al_2023_tg_eur_ldsc_heritability_markdown.mdx  xue_whole_brainstem_hba_magma_independent_clusters_markdown.mdx  xue_whole_brainstem_hba_magma_plot_extracted.html  yengo_et_al_height_ldsc_heritability_markdown.mdx
_figs/bentham_2015_lupus_magma_bar_plot/: magma_gene_set_plot.html
_figs/bentham_2015_lupus_multi_tissue_chromatin_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
_figs/bentham_2015_lupus_multi_tissue_gene_expression_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
_figs/decode_me_gsa_curated_gene_sets_full_magma_bar_plot/: magma_gene_set_plot.html
_figs/kamitaki_et_al_2025_hhv7_magma_bar_plot/: magma_gene_set_plot.html
_figs/million_veterans_cfs_magma_bar_plot/: magma_gene_set_plot.html
_figs/neale_lab_cfs_magma_bar_plot/: magma_gene_set_plot.html
_figs/nyeo_ebv_dna_magma_bar_plot/: magma_gene_set_plot.html
_figs/nyeo_ebv_dna_multi_tissue_chromatin_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
_figs/said_et_al_2022_crp_eur_magma_bar_plot/: magma_gene_set_plot.html
_figs/willer_et_al_2023_ldl_eur_magma_bar_plot/: magma_gene_set_plot.html
_figs/willer_et_al_2023_ldl_eur_multi_tissue_chromatin_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
_figs/willer_et_al_2023_ldl_eur_multi_tissue_gene_expression_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
_figs/willer_et_al_2023_tg_eur_magma_bar_plot/: magma_gene_set_plot.html
_figs/willer_et_al_2023_tg_eur_multi_tissue_gene_expression_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
_figs/xue_whole_brainstem_magma_bar_plot/: magma_gene_set_plot.html
_figs/xue_whole_brainstem_multi_tissue_chromatin_cell_analysis_s_ldsc_plot/: sldsc_scatter.html
docs/: _typos.toml  index.md  project_outline.md  refs.bib
docs/Bioinformatics_Concepts/: Cross_Trait_LDSC.md  Epigenetics.md  Fine_Mapping.md  GWAS_By_Subtraction.md  Genetic_Correlation.md  Heritability.md  LDSC.md  MAGMA_Overview.md  Mendelian_Randomization.md  Mixer.md  Omnigenic_Model.md  S_LDSC_For_Cell_And_Tissue_ID.md  Sumstats_Standardization.md
docs/Codebase_Concepts/: Build_System.md  Figure_System.md
docs/Data_Sources/: Corces_et_al.md  DecodeME.md  GTEx_RNAseq_Data.md  HBA_scRNAseq.md  Immgen_Project.md  Million_Veterans_Program.md  Roadmap.md  UKBB.md  UKBB_PPP.md
docs/Getting_Started/: Standard_Workflow.md  a_setup.md  (+7 more)
experiments/: README.md
javascripts/: mathjax.js  tablesort-scinum.js
mecfs_bio/: __init__.py  _typos.toml  try_mixer_task.py
project_outline/: index.html
scripts/: pixi-activate.sh
search/: search_index.json
(+2490 files in other folders)
