[project]
name = "biostatistics"
version = "0.1.0"
description = "A project apply biostatistical techniques to publicly available data on ME/CFS."
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=25.2.0",
    "emoji>=2.15.0",
    "geneview>=0.2.1",
    "gwaslab==3.6.8",
    "invoke>=2.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.8",
    "mypy>=1.18.2",
    "narwhals>=2.6.0",
    "networkx>=3.5",
    "numpy>=1.21.2",
    "osfclient>=0.0.5",
    "pandas>=2.3.3",
    "pandasgwas>=1.2.2",
    "pathlib-abc>=0.5.2",
    "plotly>=6.3.0",
    "polars>=1.35.1",
    "py3-wget>=1.0.13",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "structlog>=25.4.0",
    "tqdm>=4.67.1",
    "typeguard>=4.4.4",
    "types-networkx>=3.5.0.20251001",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
    "universal-pathlib>=0.3.4",
    "xarray>=2025.9.1",
    "xxhash>=3.6.0", "ibis-framework[duckdb,examples]>=11.0.0,<12", "scikit-learn>=1.7.2,<2", "mkdocs-plotly-plugin>=0.1.3,<0.2", "gdown>=5.2.0,<6", "mkdocs-gen-files>=0.5.0,<0.6", "mkdocs-literate-nav", "mkdocs-api-autonav>=0.4.0,<0.5", "mkdocstrings[python]", "tabulate>=0.9.0,<0.10", "mkdocs-bibtex>=4.4.0,<5",
]

[tool.pixi.workspace]
channels = [
    "conda-forge",
    "bioconda",
]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
biostatistics = { path = ".", editable = true }

[tool.pixi.tasks]
install-parquet-cli = { cmd = "bash -lc 'cargo install parquet@57.0.0 --features=cli --locked --root ${CONDA_PREFIX}'" }
parquet-fromcsv = { cmd = "parquet-fromcsv" }

[tool.setuptools]
packages = ["mecfs_bio"]

[tool.pixi.pypi-options.dependency-overrides]
numpy = ">=2.0.0"

[tool.pixi.dependencies]
pysam = ">=0.23.3,<0.24"
pixi-pycharm = ">=0.0.9,<0.0.10"
ruff = ">=0.14.2,<0.15"
bedops = ">=2.4.42,<3"
pyarrow = ">=22.0.0,<23"
rust = ">=1.90.0,<1.91"
duckdb = ">=1.4.1,<2"
mkdocs-material = ">=9.6.23,<10"
mkdocs-literate-nav = "*"
mkdocstrings = ">=0.30.1,<0.31"
pandoc = ">=3.8.2.1,<4"
statsmodels = ">=0.14.5,<0.15"
